Revision history for Perl extension WWW::Mechanize

        [ENHANCEMENTS]
        * If Compress::Gzip is installed, gzipped content is now
          accepted and transparently decoded. No additional syntax needed!
          This should save time and bandwidth in a number of cases. 
          (Mark Stosberg)

1.20   Sat Aug 19 09:09:08 EDT 2006

        [ENHANCEMENTS]
        * Added new two-argument form of credentials() method.
          $mech->credentials($username, $password);
          That provides simpler visiting of password-protected
          resources in the vast majority of cases and still
          allows the other cases to be supported. (Peter Scott)

        [BUG FIXES]
        * autocheck no longer is triggered when informational
          responses are returned. (Mark Stosberg)

        [INTERNALS]
        * test suite no longer fails when Test::Warn is missing. 
          (CPAN testers, Mark Stosberg)
        * Removed all the testing against live sites. The networking
          code is not actually in Mech anway, and they were prone to
          breaking, as the live sites changed. (Mark Stosberg)


1.19_02 Mon Aug  7 23:57:56 CDT 2006

        [ENHANCEMENTS]
        * Add new Do-What-I-Mean submit_form() option.
            $mech->submit_form(
                with_fields => \%data
            );
         That expresses that you want to select the first form contains all
         fields in \%data, and then submit the data to that form. See the docs
         for form_with_fields() and submit_form() for details.
         (Mark Stosberg, inspired by RT#6100)

        [BUG FIXES]
        * The behavior of clone() now copies over the cookie jar, which
          is probably what you expected it did in the first place.
          This fixes bug RT#13541 filed against Test::WWW::Mechanize,
          which was using clone() internally. (Mark Stosberg)

        * The correct URL is returned after redirecting. This a regression